# flask-webpack

./: .gitignore  .pypirc  .pyre_configuration  .travis.yml  README.md  README.rst  devRequirements.txt  pyproject.toml  requirements.txt  setup.py
flask_asset_map/: __init__.py
flask_webpack/: __init__.py  __init__.pyi  flask.pyi
flask_webpack/tests/test_app/tests/: conftest.py
flask_webpack/tests/test_app_wp1/tests/: test_views.py
requirements/: ci_common.txt  ci_modern.txt
tests/: complete_flat_asset_map.json  flat_asset_map_missing_public_path.json  flat_asset_map_renamed_public_path.json  flat_chunked_asset_map.json  nested_asset_map_empty_public_path.json  nested_asset_map_missing_public_path.json  unit.py
tests/test_app_wp1/: app.py
tests/test_app_wp1/tests/: conftest.py  test_views.py
tests/test_app_wp4/: aggressive.config.js  dynamic.config.js  package.json  webpack.config.js
tests/test_app_wp4/src/: bar.js  baz.js  foo.js  index-async.js
